Added telepoints (gnome tree navigation, mage arena ladder)